--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"app":{"id":"c55507c.9f2aaf8"},"packages":[{"id":"b9bce865.adcab8","name":"new package","purpose":"","install":"optional","risk":"","benefits":""}],"allowed-combinations":[]}
+{"app":{"id":"c5d660c3.3d5d2"},"packages":[{"id":"b9bce865.adcab8","name":"new package","purpose":"","install":"optional","risk":"","benefits":""}],"allowed-combinations":[]}
